--- a/VsCSharpWinForm_sample2/VsCSharpWinForm_sample2/VsCSharpWinForm_sample2.csproj
+++ b/VsCSharpWinForm_sample2/VsCSharpWinForm_sample2/VsCSharpWinForm_sample2.csproj
@@ -34,9 +34,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression.FileSystem" />
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
+    <Reference Include="System.Threading.Tasks" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -68,6 +76,7 @@
     <Compile Include="Helpers\TLog.cs" />
     <Compile Include="Helpers\TTcpClientSocket.cs" />
     <Compile Include="Helpers\TTcpServerSocket.cs" />
+    <Compile Include="Helpers\TTcpSocket.cs" />
     <Compile Include="Helpers\ZipHelper.cs" />
     <Compile Include="Models\MailItem.cs" />
     <Compile Include="Models\MyDbContext.cs" />
@@ -80,6 +89,12 @@
     </Compile>
     <Compile Include="Views\FrmLogin.Designer.cs">
       <DependentUpon>FrmLogin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\FrmRenameFilenames.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\FrmRenameFilenames.Designer.cs">
+      <DependentUpon>FrmRenameFilenames.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\FrmTcpClient.cs">
       <SubType>Form</SubType>
@@ -107,6 +122,9 @@
     </Compile>
     <EmbeddedResource Include="Views\FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\FrmRenameFilenames.resx">
+      <DependentUpon>FrmRenameFilenames.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\FrmTcpClient.resx">
       <DependentUpon>FrmTcpClient.cs</DependentUpon>
