--- a/VsCSharpWinForm_sample2/VsCSharpWinForm_sample2/VsCSharpWinForm_sample2.csproj
+++ b/VsCSharpWinForm_sample2/VsCSharpWinForm_sample2/VsCSharpWinForm_sample2.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Helpers\TLog.cs" />
     <Compile Include="Helpers\TTcpClientSocket.cs" />
     <Compile Include="Helpers\TTcpServerSocket.cs" />
+    <Compile Include="Helpers\TTcpSocket.cs" />
     <Compile Include="Helpers\ZipHelper.cs" />
     <Compile Include="Models\MailItem.cs" />
     <Compile Include="Models\MyDbContext.cs" />
@@ -88,6 +89,12 @@
     </Compile>
     <Compile Include="Views\FrmLogin.Designer.cs">
       <DependentUpon>FrmLogin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\FrmRenameFilenames.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\FrmRenameFilenames.Designer.cs">
+      <DependentUpon>FrmRenameFilenames.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\FrmTcpClient.cs">
       <SubType>Form</SubType>
@@ -115,6 +122,9 @@
     </Compile>
     <EmbeddedResource Include="Views\FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\FrmRenameFilenames.resx">
+      <DependentUpon>FrmRenameFilenames.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\FrmTcpClient.resx">
       <DependentUpon>FrmTcpClient.cs</DependentUpon>
