--- a/VsCSharpWinForm_sample2/VsCSharpWinForm_sample2/VsCSharpWinForm_sample2.csproj
+++ b/VsCSharpWinForm_sample2/VsCSharpWinForm_sample2/VsCSharpWinForm_sample2.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Helpers\TTcpClientSocket.cs" />
     <Compile Include="Helpers\TTcpServerSocket.cs" />
     <Compile Include="Helpers\TTcpSocket.cs" />
+    <Compile Include="Helpers\ZipHelper.cs" />
     <Compile Include="Models\MailItem.cs" />
     <Compile Include="Models\MyDbContext.cs" />
     <Compile Include="Models\Param.cs" />
@@ -91,6 +92,12 @@
     <Compile Include="Views\FrmLogin.Designer.cs">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\FrmPolygonShape2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\FrmPolygonShape2.Designer.cs">
+      <DependentUpon>FrmPolygonShape2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\FrmRenameFilenames.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -102,6 +109,12 @@
     </Compile>
     <Compile Include="Views\FrmTcpClient.Designer.cs">
       <DependentUpon>FrmTcpClient.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\FrmTicTacToe.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\FrmTicTacToe.Designer.cs">
+      <DependentUpon>FrmTicTacToe.cs</DependentUpon>
     </Compile>
     <Compile Include="Views\FrmWait.cs">
       <SubType>Form</SubType>
@@ -124,11 +137,17 @@
     <EmbeddedResource Include="Views\FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\FrmPolygonShape2.resx">
+      <DependentUpon>FrmPolygonShape2.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\FrmRenameFilenames.resx">
       <DependentUpon>FrmRenameFilenames.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\FrmTcpClient.resx">
       <DependentUpon>FrmTcpClient.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\FrmTicTacToe.resx">
+      <DependentUpon>FrmTicTacToe.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\FrmWait.resx">
       <DependentUpon>FrmWait.cs</DependentUpon>
