--- a/VsCSharpWinForm_sample2/VsCSharpWinForm_sample2/VsCSharpWinForm_sample2.csproj
+++ b/VsCSharpWinForm_sample2/VsCSharpWinForm_sample2/VsCSharpWinForm_sample2.csproj
@@ -13,6 +13,7 @@
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -71,6 +72,7 @@
     <Compile Include="Helpers\ExcelHelper.cs" />
     <Compile Include="Helpers\FileHelper.cs" />
     <Compile Include="Helpers\GeneralT.cs" />
+    <Compile Include="Helpers\LinqToExcelProvider.cs" />
     <Compile Include="Helpers\MailHelper.cs" />
     <Compile Include="Helpers\Singleton.cs" />
     <Compile Include="Helpers\SQLiteConfiguration.cs" />
@@ -79,7 +81,7 @@
     <Compile Include="Helpers\TTcpClientSocket.cs" />
     <Compile Include="Helpers\TTcpServerSocket.cs" />
     <Compile Include="Helpers\TTcpSocket.cs" />
-    <Compile Include="Helpers\ZipHelper.cs" />
+    <Compile Include="Models\LinqToExcelObject.cs" />
     <Compile Include="Models\MailItem.cs" />
     <Compile Include="Models\MyDbContext.cs" />
     <Compile Include="Models\Param.cs" />
@@ -133,6 +135,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="Views\FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
