--- a/VsCSharpWinForm_sample2/VsCSharpWinForm_sample2/VsCSharpWinForm_sample2.csproj
+++ b/VsCSharpWinForm_sample2/VsCSharpWinForm_sample2/VsCSharpWinForm_sample2.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
     <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Runtime.Serialization" />
